--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/javax.validation/validation-api
 	implementation 'javax.validation:validation-api:2.0.1.Final'
-
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:1.18.24'
 
 
 
